<resources>
    <string name="app_name">pixelbloom</string>
    <string name="let_s_go">Let\'s go!</string>
    <string name="feed">Feed</string>
    <string name="boards">Boards</string>
    <string name="challenges">Challenges</string>
    <string name="your_palette">Your palette for this challenge:</string>
    <string name="eat_rainbow_treats_and_purr_like_a_happy_cat">Eat rainbow treats and purr like a happy cat</string>
    <string name="fifth_color">fifth color in palette</string>
    <string name="fourth_color">fourth color in palette</string>
    <string name="third_color">third color in palette</string>
    <string name="second_color">second color in palette</string>
    <string name="first_color">first color in palette</string>
    <string name="your_today_s_chal">Hey! Your today\'s challenge is here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up here!</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in_here">Sign in here!</string>
    <string name="user_created_success">User created correctly in database</string>
    <string name="error_creating_user">Error creating a new user</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
    <string name="add_new_reference">Add a new reference</string>
    <string name="add_image">Add image</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_new_challenge">Add a new challenge</string>
    <string name="enter_keyword_palette">Enter a keyword to generate a palette (e.g., \'Pastel\', \'Ocean\', \'Forest\'): </string>
    <string name="key_word">Key Word</string>
    <string name="generate_palette">Generate a palette</string>
    <string name="palette_not_found">Palette not found. Try it again!</string>
    <string name="write_inspiring_description">Write an inspiring description for this challenge: </string>
    <string name="enter_title_challenge">Enter a title for this challenge: </string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="default_image_title">Title of the image</string>
    <string name="default_image_author">Author of the image</string>
    <string name="default_image_desc">Description of the image</string>
    <string name="this_challenge_is">This challenge is </string>
    <string name="incomplete">incomplete</string>
    <string name="palette_challenge">Palette of the challenge</string>
    <string name="your_inspiration">Your inspiration: </string>
    <string name="default_challenge_desc">Description of the challenge. Should be a longer description with inspirational words of the challenge selected</string>
    <string name="default_date">May 17, 2026</string>
    <string name="todays_challenges">Todays\'s Challenges</string>
    <string name="my_challenges">My challenges</string>
    <string name="my_boards">My boards</string>
    <string name="default_likes">34</string>
    <string name="default_challenge_title">#0 Title of the challenge</string>
    <string name="title_of_the_board">title of the board</string>
    <string name="default_blooms">22 blooms</string>
    <string name="cd_user_challenge_board_image">User challenge board image</string>
    <string name="split_button">split button</string>
    <string name="welcome_to_pixel_bloom">Welcome to Pixel Bloom</string>
    <string name="logotipe_app">Logotipe app</string>
    <string name="background_overlay">background overlay</string>
    <string name="background_image">background image</string>
    <string name="feed_img">Image of the feed library</string>
    <string name="separation_line">Separation line for inspiration text</string>
    <string name="spanish_lang">Español (ES)</string>
    <string name="english_lang">English (EN)</string>
    <string name="cd_spanish_lang_icon">Spanish language icon</string>
    <string name="cd_english_lang_icon">English language icon</string>
    <string name="change_board">Change board</string>
    <string name="cd_delete_reference">Icon for delete a reference</string>
    <string name="cd_settings_app_logo">Settings image with the app logo</string>
    <string name="cd_mode_icon">Mode icon</string>
    <string name="cd_reference_image_container">Reference image container with a default image</string>
    <string name="cd_delete_challenge">Icon for delete a challenge</string>
    <string name="cd_heart_icon">Heart icon for favorites reactions</string>
    <string name="cd_add_reference_fab">Floating button to add references for admins</string>
    <string name="cd_app_icon">App icon</string>
    <string name="cd_toolbar_menu_icon">Icon of the app toolbar menu</string>
    <string name="cd_edit_reference">Icon for edit a reference</string>
    <string name="edit_or_delete_challenge">Complete challenge</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit_reference">Edit reference</string>
    <string name="about_message">Designed and developed by \nAna Rodríguez González\nVersion: 1.0</string>
    <string name="default_user_name">User</string>
    <string name="error_loading_references">Error loading references</string>
    <string name="error_saving_favorite">Connection error. Could not save favorite</string>
    <string name="error_uploading_image">Error uploading image</string>
    <string name="error_compressing_image">Error compressing image</string>
    <string name="reference_saved_success">Reference saved successfully</string>
    <string name="error_saving_reference">Error saving reference</string>
    <string name="reference_updated_success">Reference updated successfully</string>
    <string name="error_updating_reference">Error updating reference</string>
    <string name="reference_deleted_success">Reference deleted successfully</string>
    <string name="error_deleting_reference">Error deleting reference</string>
    <string name="delete_reference_title">Delete reference?</string>
    <string name="delete_reference_message">This action will delete \'%1$s\' permanently from the database. Are you sure?</string>
    <string name="delete_reference_from_board_message">This action will delete \'%1$s\' from the board. Are you sure?</string>
    <string name="error_loading_challenges">Error loading challenges</string>
    <string name="error_loading_boards">Error loading boards</string>
    <string name="admin_exclusive_section">This section is exclusive for non-admin users.</string>
    <string name="challenge_updated_success">Challenge updated successfully</string>
    <string name="error_updating_challenge">Error updating challenge</string>
    <string name="challenge_saved_success">Challenge saved successfully</string>
    <string name="error_saving_challenge">Error saving challenge</string>
    <string name="challenge_deleted_success">Challenge deleted successfully</string>
    <string name="error_deleting_challenge">Error deleting challenge</string>
    <string name="delete_challenge_title">Delete challenge?</string>
    <string name="delete_challenge_message">This action will delete \'%1$s\' permanently from the database. Do you want to continue?</string>
    <string name="challenge_accepted_success">Challenge accepted! You can see it in your boards</string>
    <string name="error_accepting_challenge">Error accepting challenge</string>
    <string name="challenge_completed_success">Challenge completed successfully!</string>
    <string name="error_completing_challenge">Error completing challenge</string>
    <string name="save_image">Save</string>
    <string name="save_to_board">Select a board</string>
    <string name="create_new_board">Create new board</string>
    <string name="new_board_name">Board name</string>
    <string name="complete_all_fields">Please, complete all the fields</string>
    <string name="select_image_error">You should select an image</string>
    <string name="write_something_search">You must write something to search</string>
    <string name="generate_palette_first">Please, generate a palette first</string>
    <string name="error_getting_original_palette">Error getting original palette</string>
    <string name="must_generate_palette">Error, you must generate a palette</string>
    <string name="mandatory_fields_empty">Mandatory fields empty</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="error_invalid_email">The email format is incorrect</string>
    <string name="error_invalid_credential">Email or password are incorrect</string>
    <string name="error_user_disabled">This account has been temporarily disabled</string>
    <string name="error_email_already_in_use">This email is already in use by another account</string>
    <string name="error_weak_password">Password must be at least 6 characters long</string>
    <string name="error_too_many_requests">Access temporarily blocked due to too many attempts. Try again later</string>
    <string name="error_network_request_failed">Network connection error</string>
    <string name="error_generic_operation">Error in operation</string>
    <string name="error_permission_denied">Permission denied. Your session may have expired.</string>
    <string name="date_format_pattern">MMMM dd, yyyy</string>
    <string name="board_prefix">Board: %1$s</string>
    <string name="challenge_prefix">Challenge: %1$s</string>
    <string name="challenge_number_prefix">#%1$d %2$s</string>
    <string name="blooms_count">%1$d blooms</string>
    <string name="admin_view_only">Admin mode: View only</string>
    <string name="challenge_state_complete">complete</string>
    <string name="challenge_state_incomplete">incomplete</string>
    <string name="complete_challenge_message">This action will complete the \'%1$s\' challenge. Do you want to continue?</string>
    <string name="update_challenge_title">Update Image</string>
    <string name="update_challenge_message">Are you sure you want to update the image for this completed challenge?</string>
    <string name="view_challenge">View Challenge</string>
    <string name="edit_mode_enabled_message">You can now update the image. Tap the Add Image button.</string>
    <string name="cannot_edit_incomplete_challenge">You cannot edit an incomplete challenge.</string>
    <string name="edit_mode_activated">Edit mode activated</string>
    <string name="board_name">Board…</string>
    <string name="error_same_board">The image is already in this board</string>
    <string name="select_board_first">Tap the arrow to choose a board first</string>
    <string name="delete_board">Delete board</string>
    <string name="delete_board_message">Are you sure yo want to delete this board?</string>
    <string name="edit_board_message">Enter a new name for the board</string>
    <string name="edit_name">Edit name</string>
    <string name="floating_button_to_create_a_new_board">Floating button to create a new board</string>
    <string name="status_404_blooms_not_found">Status: 404 Blooms not Found</string>
    <string name="nothing_to_see">Nothing to see here</string>
    <string name="add_first_board">Add your first board!</string>
    <string name="add_first_bloom">Add your first bloom!</string>
    <string name="not_user_chal_img">Image for no user challenges</string>
    <string name="add_pollem_challenge">Add pollem-challenge to this panel!</string>
    <string name="board_created_success">Board created successfully</string>
</resources>