<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">
    <!--Contenedor del item para retos-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/challenge_item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:soundEffectsEnabled="true"
        app:cardCornerRadius="0dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/neutral_50"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/challenge_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/inconsolata_black"
                android:paddingBottom="10dp"
                android:text="@string/default_challenge_title"
                android:textSize="15dp" />

            <!--Contenedor de los colores de la paleta -->
            <LinearLayout
                android:id="@+id/palette_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/hex_01"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@color/dirty_orange"
                    android:contentDescription="@string/first_color" />

                <ImageView
                    android:id="@+id/hex_02"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:contentDescription="@string/second_color" />

                <ImageView
                    android:id="@+id/hex_03"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@color/inactive_blue"
                    android:contentDescription="@string/third_color" />

                <ImageView
                    android:id="@+id/hex_04"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@color/light_purple"
                    android:contentDescription="@string/fourth_color" />

                <ImageView
                    android:id="@+id/hex_05"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@color/purple"
                    android:contentDescription="@string/fifth_color" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>